# ai-ops-automation-control-plane

./: .env.example  .gitignore  CASE-STUDY.md  CLAUDE.md  Makefile  README.md  SCREENSHOTS.md  SECURITY.md  docker-compose.yml
.claude/skills/document-extraction/: SKILL.md
.claude/skills/n8n-workflows/: SKILL.md
.claude/skills/portfolio-docs/: SKILL.md
.claude/skills/rag-knowledge-base/: SKILL.md
.claude/skills/scaffold-infra/: SKILL.md
.github/workflows/: ci.yml
postgres/init/: 01-init.sql
tools/: Dockerfile  pyproject.toml
tools/app/: __init__.py  config.py  db.py  embeddings.py  extraction.py  llm.py  main.py  models.py  rag.py  seed.py  service.py
tools/scripts/: make_sample_invoices.py
tools/tests/: conftest.py  test_extract.py  test_health.py  test_rag.py
workflows/: README.md  inbound-triage-agent.json  inbound-triage-agent.md  ops-daily-report.json  ops-daily-report.md  rag-support-agent.json  rag-support-agent.md
